--- a/05-pug/pug/17-challenge.pug
+++ b/05-pug/pug/17-challenge.pug
@@ -1,4 +1,17 @@
-doctype 
-html (lang = "en")
-    head 
-        
+doctype
+html(lang="en")
+    head
+        meta(charset="UTF-8")
+        title Challenge PUG
+    body
+        h1 Challenge PUG
+        div.deg1 
+        div.deg2 
+        div.deg3  
+        div.deg4 
+        div.deg5  
+        div.deg6  
+        div.deg7  
+        div.deg8  
+        div.deg9  
+        div.deg10   
