--- a/05-pug/pug/17-challenge.pug
+++ b/05-pug/pug/17-challenge.pug
@@ -4,7 +4,7 @@ html(lang="en")
         meta(charset="UTF-8")
         title Challenge PUG
     body
-        h1 Challenge PUG
+        h1 Challenge PUG (Colors)
         div.deg1 
         div.deg2 
         div.deg3  
@@ -14,4 +14,19 @@ html(lang="en")
         div.deg7  
         div.deg8  
         div.deg9  
-        div.deg10   
+        div.deg10  
+        
+        //-tr 
+        //-table(width="400px")
+            - var i = 1
+            - var r = 250
+            - var g = 250
+            - var b = 250
+            while i <= 10
+                tr 
+                    td(style="bgc: rgb()"+r+","+g+","+b+"); heigth: 40px"
+                    - i++
+                    - r-=25
+                    - g-=25
+
+        
