--- a/07-javascript/css/menu.css
+++ b/07-javascript/css/menu.css
@@ -1,3 +1,4 @@
+
 body {
     background: url(../images/javascript-compressor.png) no-repeat center;
     display: flex;
@@ -10,15 +11,19 @@ body {
 
 }
 main {
-    background-color: rgba(255, 255, 255, 0.404);
+    background-color: rgba(0, 0, 0, 0.404);
     border-radius: 40px;
     height: 720px;
     width: 1000px;
     border: 4px solid black;
     
 }
-h1 {
+header h1 {
     text-align: center;
+    
+}
+header{
+    position: relative;
 }
 nav {
     display: flex;
@@ -32,7 +37,7 @@ nav li {
     list-style: none;
 }
 nav li a:link, nav li a:visited{
-    background-color: rgba(179, 245, 234, 0.829);
+    background-color: wheat;
     border-radius: 50px;
     display: flex;
     padding: 10px;
@@ -40,6 +45,7 @@ nav li a:link, nav li a:visited{
     width: 460px;
     font-size:larger;
     text-align: center;
+    color: black;
 }
 nav li a i {
     background-color: #000;
@@ -55,5 +61,28 @@ nav li a i {
     margin-right: 25px;
 }
 nav li a:hover {
-    background-color: rgb(182, 255, 11);
+    background-color: rgb(146, 173, 83);
 } 
+header a:link, header a:visited{
+    color: wheat;
+    display: block;
+    float: left;
+    height: 40px;
+    margin-left: 20px;
+    width: 40px;
+    left: 20px;
+    top: 10px;
+    transition: all 0.5s ease-in;
+    position: absolute;
+} 
+header a:hover{
+    transform:  translateX(-10px);
+    color: black;
+    background-image: url();
+}
+h2, h3, h4 {
+    text-align: center;
+    border-bottom: 4px dashed white;
+    margin: 0px 120px;
+}
+
