--- a/07-javascript/css/menu.css
+++ b/07-javascript/css/menu.css
@@ -11,11 +11,12 @@ body {
 
 }
 main {
-    background-color: rgba(0, 0, 0, 0.404);
+    background-color: rgba(0, 0, 0, 0.274);
     border-radius: 40px;
     height: 720px;
     width: 1000px;
     border: 4px solid black;
+    color: #000;
     
 }
 header h1 {
@@ -49,7 +50,7 @@ nav li a:link, nav li a:visited{
 }
 nav li a i {
     background-color: #000;
-    border-radius: 50%;
+    border-radius: 100%;
     color: wheat;
     display: flex;
     justify-content: center;
@@ -82,7 +83,7 @@ header a:hover{
 }
 h2, h3, h4 {
     text-align: center;
-    border-bottom: 4px dashed white;
+    border-bottom: 4px solid rgba(255, 255, 255, 0.397);
     margin: 0px 120px;
 }
 
