--- a/07-javascript/css/pokedex.css
+++ b/07-javascript/css/pokedex.css
@@ -1,28 +1,26 @@
-main.init {
-    background-image: url(../images/images-pokedex/menu-init/bg-menus.svg);
-}
+
 section#content {
+    background-image: url(../images/Pokapi/MAIN.svg);
+    width: 445px;
+    height: 700px;
     display: grid;
     margin: 0 auto;
-    width: 100%;
-    height: 100%;
+   
 }
 div {
     margin: 0 auto;
 }
 div.title-pokedex{
-    height: auto;
+    background: url(../images/Pokapi/image\ 2.svg) no-repeat center;
+    margin-top: 10px;
+    height: 81px;
+    width: 265px;
     display: flex;
-
+    cursor: cell;
 }
-div.title-pokedex p.title-init {
-    display: flex;
-    background: url(../images/images-pokedex/title.svg)no-repeat;
-    background-position: center center;
-    height: 40px;
-    margin: 0 auto;
-    width: 420px;
-    justify-content: center;
+div.title-pokedex:hover {
+    transform: scale(1.1);
+
 }
 .banner {
     width: 100%;
@@ -44,30 +42,19 @@ div.title-pokedex p.title-init {
     display: flex;
     flex-wrap: wrap;
 }
-.pokemons div {
-    z-index: 0;
-    width: 147px;
-    height: 147px;
-
+.pokemons div.pikachu {
+    background: url(../images/Pokapi/image-removebg-preview.png) no-repeat center;
+    background-size: contain;
+    height: 260px;
+    width: 300px;
 }
-.pokemons .chikorita {
-    position: relative;
-    z-index: 1;
-    background: url(../images/images-pokedex/menu-init/chikorita-menu.svg)no-repeat;
-    animation: chikorita 10s 1.5s infinite normal forwards;
-}
-.pokemons .cyndaquil{
-    position: relative;
-    z-index: 2;
-    background: url(../images/images-pokedex/menu-init/cyndaquil-menu.svg);
-    animation: cyndaquil 10s 1.5s infinite normal forwards;
-}
-.pokemons .totodile{
-    position: relative;
-    z-index: 3;
-    background: url(../images/images-pokedex/menu-init/totodile-menu.svg);
-    transform: translatey(-60px);
-    animation: totodile 10s 1.5s infinite normal forwards;
+.pokemons div.pikachu:hover{
+    transform: scale(1.1);
+    background: url(../images/Pokapi/Change.png) no-repeat center;
+    background-size:contain;
+    height: 280px;
+    width: 300px;
+    cursor:cell;
 }
 .end{
     display: flex;
@@ -75,52 +62,18 @@ div.title-pokedex p.title-init {
     height: 100px;
 }
 .end a{
-    cursor: pointer;
-    border: none;
-    margin: 0 auto;
-    width: 180px;
+    background-position: center center;
     height: 70px;
+    margin: 0 auto;
+    width: 270px;
     justify-content: center;
-    background: url(../images/images-pokedex/menu-init/btn-enter.svg)no-repeat center;
+    align-self: flex-end;
+    background: url(../images/Pokapi/Go.svg)no-repeat center;
 }
 .end a:hover {
     transform: scale(1.1);
 }
-@keyframes totodile {
-    0%{
-        transform: scale(1.2);
-    }
-    33%{
-        z-index: 2;
-        transform: translate(105px,-150px);
-    }
-    66%{
-        z-index: 1;
-        transform: translate(-110px,-150px);
 
-    }
-}
-@keyframes chikorita {
-    33%{
-        transform: translate(105px,90px);
-        z-index: 3;
-    }
-    66%{
-        transform: translate(210px,-6px);
-        z-index: 2;
-    }
-}
-@keyframes cyndaquil {
-    33%{
-        z-index: 1;
-        transform: translate(-213px);
-    }
-    66%{
-        z-index: 3;
-        transform: translate(-105px,90px);
-
-    }
-}
 
 /* css menu nav*/
 main.nav {
